Free decoded chunk in ChunkedFrameDecoderTest
Decoder is allocating a chunk: make sure to free it after examining it.

JIRA: NETCONF-1674
Change-Id: I556f1624fc99cf7d03e6691a6a52377de28ba6c3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 771b7c935d0e7da2f81aea6bd5246c17ddd19900)
(cherry picked from commit a1b9adb7b595a3befbb51dfab5bf536958a83e76)